When KWallet is opened synchronously do it in a safe way.

BUG: 255764
REVIEW: 107507